put back caption for multi-page longtable in latex

--- a/tests/visual_tests/longtable.Rmd
+++ b/tests/visual_tests/longtable.Rmd
@@ -22,7 +22,13 @@ kable(dt, "latex", longtable = T, caption="test table") %>%
 ```
 
 ```{r}
-kable(dt, "latex", longtable = T, caption="test table", booktabs = T) %>%
+aaa <- kable(dt, "latex", longtable = T, caption="table2", booktabs = T) %>%
   add_header_above(c(" ", "a" = 6, "b" = 5)) %>%
-  kable_styling(latex_options = "repeat_header", repeat_header_text = "Table 2 cont.")
+  kable_styling(latex_options = "repeat_header", repeat_header_text = "(...)")
+```
+
+```{r}
+kable(dt, "latex", longtable = T, booktabs = T) %>%
+  add_header_above(c(" ", "a" = 6, "b" = 5)) %>%
+  kable_styling(latex_options = "repeat_header", repeat_header_text = "(cont.)")
 ```
