improve the look of striped rows in longtable

--- a/tests/visual_tests/longtable.Rmd
+++ b/tests/visual_tests/longtable.Rmd
@@ -16,15 +16,14 @@ library(kableExtra)
 
 dt <- rbind(mtcars, mtcars) 
 
-kable(dt, "latex", longtable = T, caption="test table") %>%
-  add_header_above(c(" ", "a" = 6, "b" = 5)) %>%
-  kable_styling(latex_options = "repeat_header")
+# kable(dt, "latex", longtable = T, caption="test table") %>%
+#   add_header_above(c(" ", "a" = 6, "b" = 5)) %>%
+#   kable_styling(latex_options = "repeat_header")
 ```
 
 ```{r}
-kable(dt, "latex", longtable = T, caption="table2", booktabs = T) %>%
-  add_header_above(c(" ", "a" = 6, "b" = 5)) %>%
-  kable_styling(latex_options = "repeat_header", repeat_header_text = "(...)")
+kable(dt, "latex", longtable = T, caption = "test", booktabs = T) %>%
+  kable_styling(latex_options = c("striped", "repeat_header"), repeat_header_text = "(...)")
 ```
 
 ```{r}
