--- a/tests/visual_tests/column_row_spec_html.Rmd
+++ b/tests/visual_tests/column_row_spec_html.Rmd
@@ -41,6 +41,17 @@ kable(dt, "html") %>%
   kable_styling(full_width = F) %>%
   column_spec(2, "5cm", bold = T) %>%
   column_spec(4, "3cm", italic = T)  %>%
-  row_spec(1, italic = T)
+  row_spec(1, bold = T)
 ```
 
+```{r}
+dt <- mtcars[1:5, 1:6]
+dt$wt <- paste(dt$wt, "%")
+dt$mpg <- paste(dt$mpg, "&")
+dt$cyl <- paste(dt$cyl, "$")
+
+kable(dt, "html") %>%
+  kable_styling(full_width = F) %>%
+  column_spec(7, bold = T) %>%
+  row_spec(5, bold = T, italic = T)
+```
