--- a/tests/visual_tests/column_row_spec_pdf.Rmd
+++ b/tests/visual_tests/column_row_spec_pdf.Rmd
@@ -52,6 +52,7 @@ dt$mpg <- paste(dt$mpg, "&")
 dt$cyl <- paste(dt$cyl, "$")
 
 kable(dt, "latex", booktabs = T) %>%
+  group_rows("Group 1", 2, 4) %>%
   column_spec(7, bold = T) %>%
   row_spec(5, bold = T, italic = T)
 ```
