--- a/inst/NEWS
+++ b/inst/NEWS
@@ -9,10 +9,13 @@ groups
 
 * Fixed a bug in grouped rows with ()[].
 
-* Add a new LaTeX option `repeat_header` in `kable_styling` for repeating
+* Added a new LaTeX option `repeat_header` in `kable_styling` for repeating
 header rows in a longtable environment.
 
 * Fixed a bug in add_header_above to allow special symbol in extra header rows.
+
+* Added add_header_left() feature so people can insert heading columns as they
+do for heading rows.
 
 kableExtra 0.2.1
 --------------------------------------------------------------------------------
