--- a/docs/awesome_table_in_html.Rmd
+++ b/docs/awesome_table_in_html.Rmd
@@ -233,8 +233,9 @@ An alternative way of grouping rows is being added to `kableExtra` 0.3.0. Unlike
 ```{r}
 mtcars[1:10, 1:6] %>%
   kable("html") %>%
-  kable_styling() %>%
+  kable_styling()  %>%
   add_header_above(c(" ", "Data 1" = 3, "Data 2" = 3)) %>%
-  add_header_left(c("Group A" = 3, "Group B" = 7), "Group") %>%
-  add_header_left(c("Team X" = 4, "Team Y" = 2, "Team Z" = 4), "Team") 
+  add_header_left(c("Group A" = 3, "Group B" = 2, "Group C" = 4, "Group D" = 1), "Group") %>%
+  add_header_left(c("Team X" = 5, "Team Y" = 5), "Team") %>%
+  add_header_left(c("League Alpha" = 10), "League")
 ```
