--- a/tests/visual_tests/add_header_left_html.Rmd
+++ b/tests/visual_tests/add_header_left_html.Rmd
@@ -11,6 +11,7 @@ mtcars[1:10, 1:6] %>%
   kable("html") %>%
   kable_styling() %>%
   add_header_above(c(" ", "a" = 3, "b" = 3)) %>%
-  add_header_left(c("a" = 2, "b" = 3)) %>%
-  add_header_left(c("a%" = 3, "b" = 7))
+  add_header_left(c("a" = 2, "b" = 3), width = "3cm", bold = T) %>%
+  add_header_left(c("a%" = 3, "b" = 7)) %>%
+  column_spec(1, bold = T, width = "1cm")
 ```
