--- a/docs/awesome_table_in_html.Rmd
+++ b/docs/awesome_table_in_html.Rmd
@@ -239,3 +239,12 @@ mtcars[1:10, 1:6] %>%
   add_header_left(c("Team X" = 5, "Team Y" = 5), "Team") %>%
   add_header_left(c("League Alpha" = 10), "League")
 ```
+
+Also, since `col_spec` won't work on these "added" header rows & columns, if you want to bold, italic or specify width for these appended columns, you can define them here. 
+```{r}
+mtcars[1:5, 1:6] %>%
+  kable("html") %>%
+  kable_styling()  %>%
+  add_header_above(c(" ", "Data 1" = 3, "Data 2" = 3)) %>%
+  add_header_left(c("Group A" = 3, "Group B" = 2), "Group", bold = T, width = "10cm")
+```
