--- a/tests/visual_tests/column_row_spec_pdf.Rmd
+++ b/tests/visual_tests/column_row_spec_pdf.Rmd
@@ -39,35 +39,8 @@ dt <- data.frame(
   )
 )
 
-kable(dt, "latex", booktabs = T) %>%
-  kable_styling(latex_options = "scale_down") %>%
-  column_spec(2, "30em", bold = T) %>%
+kable(dt, "latex", booktabs = T, align = "r") %>%
+  column_spec(2, "3cm", bold = T) %>%
   column_spec(4, "3cm", italic = T)
-```
-
-```{r}
-dt <- mtcars[1:5, 1:6]
-dt$wt <- paste(dt$wt, "%")
-dt$mpg <- paste(dt$mpg, "&")
-dt$cyl <- paste(dt$cyl, "$")
-
-kable(dt, "latex", booktabs = T) %>%
-  group_rows("Group 1", 2, 4) %>%
-  column_spec(7, bold = T) %>%
-  row_spec(5, bold = T, italic = T)
-```
-
-
-```{r}
-dt <- mtcars[1:5, 1:6]
-dt$wt <- paste(dt$wt, "%")
-dt$mpg <- paste(dt$mpg, "&")
-dt$cyl <- paste(dt$cyl, "$")
-
-kable(dt, "latex", booktabs = T) %>%
-  add_header_left(c("aaa aaa aaa aaa aaa" = 2, "bbb" = 3), "A") %>%
-  column_spec(8, bold = T) %>%
-  column_spec(1, bold = T, width = "1em") %>%
-  row_spec(5, bold = T, italic = T)
 ```
 
