--- a/docs/awesome_table_in_pdf.Rmd
+++ b/docs/awesome_table_in_pdf.Rmd
@@ -128,13 +128,13 @@ kable(dt, booktabs = T) %>%
   add_header_above(c(" " = 1, "Group 1" = 2, "Group 2" = 2, "Group 3" = 2))
 ```
 
-In fact, if you want to add another row of header on top, please feel free to do so. 
+In fact, if you want to add another row of header on top, please feel free to do so. Also, in kableExtra 0.3.0, you can specify `bold` & `italic` as you do in `row_spec()`.
 ```{r}
 kable(dt, booktabs = T) %>%
   kable_styling() %>%
   add_header_above(c(" ", "Group 1" = 2, "Group 2" = 2, "Group 3" = 2)) %>%
   add_header_above(c(" ", "Group 4" = 4, "Group 5" = 2)) %>%
-  add_header_above(c(" ", "Group 6" = 6))
+  add_header_above(c(" ", "Group 6" = 6), bold = T, italic = T)
 ```
 
 # Add footnote
@@ -252,15 +252,3 @@ kable(dt, booktabs = T) %>%
   row_spec(5, bold = T)
 ```
 
-# Add header column to the left
-An alternative way of grouping rows is being added to `kableExtra` 0.3.0. Unlike `group_rows`, the new function `add_header_left` adopts a similar syntax with `add_header_above`. It allows users to add multiple layers of row groups, which is a limitation of `group_rows`. One limitation of `add_header_left` is that, you can only use it in `booktabs` tables. There is no future plan to extend support to LaTeX table without booktabs because it is techinically very difficult. Other limitations include incompatible with `group_rows` and a little in-stable `striped` row coloring behavior. If you don't have special need for multiple layers of heading columns or special love to this format, I will recommend you stick with `group_rows`. 
-
-```{r}
-mtcars[1:10, 1:6] %>%
-  kable("latex", booktabs= T) %>%
-  add_header_above(c(" ", "Data 1" = 3, "Data 2" = 3)) %>%
-  add_header_left(c("Group A" = 3, "Group B" = 2, "Group C" = 4, "Group D" = 1), "Group") %>%
-  add_header_left(c("Team X" = 5, "Team Y" = 5), "Team", full_midline = T) %>%
-  add_header_left(c("League Alpha" = 10), "League") %>%
-  column_spec(1, bold = T)
-```
