--- a/tests/visual_tests/column_row_spec_html.Rmd
+++ b/tests/visual_tests/column_row_spec_html.Rmd
@@ -38,10 +38,10 @@ dt <- data.frame(
 )
 
 kable(dt, "html") %>%
-  kable_styling(full_width = F) %>%
+  kable_styling(full_width = F)   %>%
+  row_spec(1, bold = T) %>%
   column_spec(2, "5cm", bold = T) %>%
-  column_spec(4, "3cm", italic = T)  %>%
-  row_spec(1, bold = T)
+  column_spec(4, "3cm", italic = T)
 ```
 
 ```{r}
