--- a/docs/awesome_table_in_pdf.Rmd
+++ b/docs/awesome_table_in_pdf.Rmd
@@ -266,3 +266,9 @@ kable(collapse_rows_dt, "latex", booktabs = T, align = "c") %>%
   collapse_rows(columns = 1:2)
 ```
 
+```{r}
+kable(collapse_rows_dt, "latex", align = "c") %>%
+  column_spec(1, bold=T) %>%
+  collapse_rows()
+```
+
