--- a/tests/visual_tests/indent_and_row_group.Rmd
+++ b/tests/visual_tests/indent_and_row_group.Rmd
@@ -27,10 +27,6 @@ for (i in 1:nrow(mtcars)) {
   mtcars$wt[i] <- paste0(mtcars$wt[i], " &")
   mtcars$mpg[i] <- paste0(mtcars$mpg[i], "%")
 }
-kable(head(mtcars, n = 20), "latex", caption = "test", booktabs = T) %>%
-  kable_styling() %>%
-  # group_rows("these rows", 4, 16) %>%
-  # group_rows("Those rows", 17,20) %>%
-  # add_header_above(c(" ", "aaa$" = 5, "bbb%" = 6)) %>%
-  add_header_left(c("jj", "aaa" = 5, "bbb" = 6)) 
+kable(head(iris, n = 20), "latex", caption = "test", booktabs = T,
+      align = c("ccccc"))
 ```
