--- a/tests/visual_tests/longtable.Rmd
+++ b/tests/visual_tests/longtable.Rmd
@@ -36,7 +36,7 @@ kable(dt, "latex", longtable = T, caption = "test", booktabs = T) %>%
 ```{r}
 kable(dt, "latex", longtable = T, booktabs = T) %>%
   add_header_above(c(" ", "a" = 6, "b" = 5)) %>%
-  kable_styling(latex_options = "repeat_header", repeat_header_text = "(cont.)")
+  kable_styling(latex_options = c("striped", "repeat_header"), repeat_header_text = "(cont.)")
 ```
 
 ```{r}
